final working helm chart

--- a/task-manager-api/templates/deployment.yaml
+++ b/task-manager-api/templates/deployment.yaml
@@ -1,46 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "task-manager-api.fullname" . }}
+  name: task-manager-api
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ include "task-manager-api.name" . }}
-    chart: {{ include "task-manager-api.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-
 spec:
   replicas: {{ .Values.replicaCount }}
 
   selector:
     matchLabels:
-      app: {{ include "task-manager-api.name" . }}
-      release: {{ .Release.Name }}
+      app: task-manager-api
 
   template:
     metadata:
       labels:
-        app: {{ include "task-manager-api.name" . }}
-        release: {{ .Release.Name }}
+        app: task-manager-api
 
     spec:
       containers:
-        - name: {{ include "task-manager-api.name" . }}
-
+        - name: task-manager-api
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
 
           ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
-
-          env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: {{ .Values.springProfile | quote }}
-
-            - name: SERVER_PORT
-              value: "8080"
+            - containerPort: 8080
 
           resources:
             limits:
@@ -56,7 +38,6 @@ spec:
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
-            timeoutSeconds: 5
 
           readinessProbe:
             httpGet:
@@ -64,5 +45,4 @@ spec:
               port: 8080
             initialDelaySeconds: 15
             periodSeconds: 5
-            timeoutSeconds: 3
 
