--- a/task-manager-api/templates/deployment.yaml
+++ b/task-manager-api/templates/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: task-manager-api
   namespace: {{ .Release.Namespace }}
+  labels:
+    app: task-manager-api
 spec:
   replicas: {{ .Values.replicaCount }}
 
@@ -24,6 +26,18 @@ spec:
           ports:
             - containerPort: 8080
 
+          # --- Environment Variables ---
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: "local"
+
+            # Disable Redis cache in EKS for now
+            - name: SPRING_CACHE_TYPE
+              value: "none"
+
+            - name: SERVER_PORT
+              value: "8080"
+
           resources:
             limits:
               cpu: {{ .Values.resources.limits.cpu }}
@@ -32,17 +46,23 @@ spec:
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
 
+          # --- Liveness Probe ---
           livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 40
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+
+          # --- Readiness Probe ---
+          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
-
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 5
+            timeoutSeconds: 5
+            failureThreshold: 3
 
